--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,8 +1,9 @@
 {
-    "extends": "expo-module-scripts/tsconfig.plugin",
-    "compilerOptions": {
-      "outDir": "build",
-      "rootDir": "src"
-    },
-    "include": ["./src"],
-  }
+  "compilerOptions": {
+    "outDir": "build",
+    "rootDir": "src"
+  },
+  "include": [
+    "./src"
+  ],
+}
